Fix2#Spacing

--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -924,7 +924,7 @@ header {
     position: fixed;
     width: 100%;
     top: 20rem;
-    left: 61git rem;
+    left: 65rem;
 }
 
 .blog-svg img{
@@ -964,7 +964,7 @@ header {
     width:60%;
     margin: 0 0;
     margin-top: 5rem;
-    margin-left: 3rem ;
+    margin-left: 5rem;
 }
 
 .head{
@@ -1047,7 +1047,7 @@ header {
 
 .div-svg{
     padding-top: 20px;
-    padding-left: 20px;
+    padding-left: 5rem;
 }
 
 .div-svg img{
